# Intelligent-Lead-Scoring

./: .env.example  .gitignore  CLAUDE.md  PIANO_agente_planner_llm.md  README.md  REFACTOR_SPEC.md  cli.py  pyproject.toml  requirements.txt  streamlit_app.py
config/: blocklists.json  category_thresholds.json  dealer_catchment.json  score_weights_naive.json
data/: leads_adversarial.json  leads_history.json  leads_mock.json  mock_extractions.json
data/tests/: SHOW-HOT-2.json  SHOW-INVALID-2.json  SHOW-INVALID.json  SHOW-WARM-HIGH-2.json  SHOW-WARM-LOW-2.json
deliverables/: calibrazione_pesi.md  costi.md  flusso_valutazione.md
docs/: architecture.md  calibration.md  cost_model.md  cost_report.json  decision_rights.md  progettazione.md  roadmap.md
docs/diagrams/: flow_e2e.txt  scoring_axes.txt
legacy/: First_prompt.md
sample_leads/: README.md  SHOW-COLD-2.json  SHOW-COLD.json  SHOW-HOT.json  SHOW-WARM-HIGH.json  SHOW-WARM-LOW.json  leads_showcase.json
scripts/: agent_repl.py  build_mock_extractions.py  estimate_cost.py  run_demo.py
src/: __init__.py  config.py  history.py  logging_setup.py  main.py  privacy.py
src/action/: __init__.py  decision.py  suggestions.py
src/agent/: __init__.py  agent_prompts.py  guardrails.py  planner.py  runner.py  session_store.py  state_machine.py  tools.py
src/extraction/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_agent.py  test_agent_planner.py  test_api.py  test_categorization_action.py  test_extraction.py  test_gate.py  test_history.py  test_pipeline.py  test_privacy.py  test_scoring.py  test_suggestions.py
(+27 files in other folders)
