[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-scoring"
version = "0.1.0"
description = "Intelligent lead scoring microservice for an automotive call center (AutoXY assignment)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
llm = ["openai"]
cli = ["rich"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
